androot-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: androot-srv
  labels:
    app: androot-srvapp
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: rancher-podapp
  type: NodePort
